# visual-planning-experiment

./: .gitignore  README.md  koa-config.yaml  pyproject.toml
frozenlake_benchmark/: __init__.py  report.ipynb
frozenlake_benchmark/data/: sandbox.jsonl  test.jsonl  train.jsonl
frozenlake_benchmark/data/eval/: qwen25vl_3b_local.jsonl  qwen25vl_sandbox.jsonl  qwen25vl_test.jsonl
frozenlake_benchmark/scripts/: eval_ascii.sh  eval_image.sh  gen_all.sh
frozenlake_benchmark/src/: __init__.py  generate_dataset.py  metrics.py  render_ascii.py  render_dataset.py  render_image.py  run_vlm_eval.py  utils.py
scripts/: basic_job.slurm  setup_env.sh
